feat: Update content

--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="vi">
 <head>
     <meta charSet="utf-8"/>
-    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no, viewport-fit=cover"/>
+    <meta name="viewport"
+          content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no, viewport-fit=cover"/>
     <title>Your better Digital Workplace | GapoWork</title>
     <meta name="robots" content="index,follow"/>
-    <meta name="description" content="Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc"/>
+    <meta name="description"
+          content="Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc"/>
     <meta property="og:title" content="Your better Digital Workplace"/>
-    <meta property="og:description" content="Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc"/>
+    <meta property="og:description"
+          content="Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc"/>
     <meta property="og:url" content="https://gapowork.com/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://landing-assets.gapowork.com/cover/1200-630/uploads/4320x1734_d093046744.jpg"/>
+    <meta property="og:image"
+          content="https://landing-assets.gapowork.com/cover/1200-630/uploads/4320x1734_d093046744.jpg"/>
     <meta property="og:image:alt" content="Your better Digital Workplace"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
@@ -18,8 +22,67 @@
     <meta property="og:site_name" content="GapoWork - Không gian làm việc số sẵn sàng cho doanh nghiệp của bạn"/>
     <link rel="canonical" href="https://gapowork.com/"/>
     <meta name="keywords" content="GapoWork"/>
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Corporation","name":"GapoWork: Nền tảng giao tiếp dành cho doanh nghiệp","description":"Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc","alternateName":"GapoWork","url":"https://gapowork.com/","logo":"https://landing-assets.gapowork.com/uploads/Gapo_Work_Logo_Wordmark_b92944bde4.png","sameAs":["https://www.youtube.com/@gapowork_com/about","https://twitter.com/gapowork","https://www.pinterest.com/gapowork/","https://myspace.com/gapowork","https://www.scoop.it/u/gapowork","https://gapoworkcom.tumblr.com/","https://www.flickr.com/people/gapowork/","https://sites.google.com/view/gapowork/home"],"contactPoint":[{"@type":"ContactPoint","telephone":"1900 633 338","contactType":"technical support","contactOption":"TollFree","areaServed":"VN","availableLanguage":"Vietnamese"}]}</script>
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"ProfessionalService","@id":"https://gapowork.com","description":"","name":"GapoWork: Nền tảng giao tiếp dành cho doanh nghiệp","url":"https://gapowork.com/","telephone":"1900 633 338","sameAs":["https://www.youtube.com/@gapowork_com/about","https://twitter.com/gapowork","https://www.pinterest.com/gapowork/","https://myspace.com/gapowork","https://www.scoop.it/u/gapowork","https://gapoworkcom.tumblr.com/","https://www.flickr.com/people/gapowork/","https://sites.google.com/view/gapowork/home","https://www.facebook.com/gapowork"],"address":{"@type":"PostalAddress","streetAddress":"275 Nguyễn Trãi, Thanh Xuân Trung, Thanh Xuân, Hà Nội","addressLocality":"Hà Nội","postalCode":"100000","addressCountry":"VN"},"geo":{"@type":"GeoCoordinates","latitude":20.9928411,"longitude":105.8046191}}</script>
+    <script type="application/ld+json">{
+        "@context": "https://schema.org",
+        "@type": "Corporation",
+        "name": "GapoWork: Nền tảng giao tiếp dành cho doanh nghiệp",
+        "description": "Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc",
+        "alternateName": "GapoWork",
+        "url": "https://gapowork.com/",
+        "logo": "https://landing-assets.gapowork.com/uploads/Gapo_Work_Logo_Wordmark_b92944bde4.png",
+        "sameAs": [
+            "https://www.youtube.com/@gapowork_com/about",
+            "https://twitter.com/gapowork",
+            "https://www.pinterest.com/gapowork/",
+            "https://myspace.com/gapowork",
+            "https://www.scoop.it/u/gapowork",
+            "https://gapoworkcom.tumblr.com/",
+            "https://www.flickr.com/people/gapowork/",
+            "https://sites.google.com/view/gapowork/home"
+        ],
+        "contactPoint": [
+            {
+                "@type": "ContactPoint",
+                "telephone": "1900 633 338",
+                "contactType": "technical support",
+                "contactOption": "TollFree",
+                "areaServed": "VN",
+                "availableLanguage": "Vietnamese"
+            }
+        ]
+    }</script>
+    <script type="application/ld+json">{
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "@id": "https://gapowork.com",
+        "description": "",
+        "name": "GapoWork: Nền tảng giao tiếp dành cho doanh nghiệp",
+        "url": "https://gapowork.com/",
+        "telephone": "1900 633 338",
+        "sameAs": [
+            "https://www.youtube.com/@gapowork_com/about",
+            "https://twitter.com/gapowork",
+            "https://www.pinterest.com/gapowork/",
+            "https://myspace.com/gapowork",
+            "https://www.scoop.it/u/gapowork",
+            "https://gapoworkcom.tumblr.com/",
+            "https://www.flickr.com/people/gapowork/",
+            "https://sites.google.com/view/gapowork/home",
+            "https://www.facebook.com/gapowork"
+        ],
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "275 Nguyễn Trãi, Thanh Xuân Trung, Thanh Xuân, Hà Nội",
+            "addressLocality": "Hà Nội",
+            "postalCode": "100000",
+            "addressCountry": "VN"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 20.9928411,
+            "longitude": 105.8046191
+        }
+    }</script>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://www.googletagmanager.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
@@ -27,10 +90,16 @@
 </head>
 <body>
 {{> header }}
-<main>
+<main class="overflow-x-hidden">
     {{> content-1}}
     {{> content-2}}
+    {{> content-3}}
+    {{> content-4}}
+    {{> content-5}}
+    {{> content-6}}
 </main>
+{{> footer}}
+
 <script type="module" src="/main.js"></script>
 </body>
 </html>
