feat: Update content

--- a/index.html
+++ b/index.html
@@ -93,13 +93,15 @@
 <main class="overflow-x-hidden">
     {{> content-1}}
     {{> content-2}}
-    {{> content-3}}
+    {{> content-3-pc}}
+    {{> content-3-mb}}
     {{> content-4}}
     {{> content-5}}
     {{> content-6}}
+    {{> modal}}
 </main>
 {{> footer}}
 
-<script type="module" src="/main.js"></script>
+<script type="module" src="./main.js"></script>
 </body>
 </html>
