feat: Update content

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             "longitude": 105.8046191
         }
     }</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/whatwg-fetch/3.4.1/fetch.umd.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://www.googletagmanager.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
