--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charSet="utf-8"/>
     <meta name="viewport"
@@ -7,10 +7,10 @@
     <title>Your better Digital Workplace | GapoWork</title>
     <meta name="robots" content="index,follow"/>
     <meta name="description"
-          content="Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc"/>
+          content="Always available with over 20 features to meet all communication and collaboration needs"/>
     <meta property="og:title" content="Your better Digital Workplace"/>
     <meta property="og:description"
-          content="Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc"/>
+          content="Always available with over 20 features to meet all communication and collaboration needs"/>
     <meta property="og:url" content="https://gapowork.com/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image"
@@ -18,15 +18,15 @@
     <meta property="og:image:alt" content="Your better Digital Workplace"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
-    <meta property="og:locale" content="vi_VN"/>
-    <meta property="og:site_name" content="GapoWork - Không gian làm việc số sẵn sàng cho doanh nghiệp của bạn"/>
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:site_name" content="GapoWork - Your ready-to-use digital workspace for your business"/>
     <link rel="canonical" href="https://gapowork.com/"/>
     <meta name="keywords" content="GapoWork"/>
     <script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "Corporation",
-        "name": "GapoWork: Nền tảng giao tiếp dành cho doanh nghiệp",
-        "description": "Luôn có sẵn hơn 20 tính năng có thể đáp ứng mọi nhu cầu giao tiếp và phối hợp công việc",
+        "name": "GapoWork: Communication platform for businesses",
+        "description": "Always available with over 20 features to meet all communication and collaboration needs",
         "alternateName": "GapoWork",
         "url": "https://gapowork.com/",
         "logo": "https://landing-assets.gapowork.com/uploads/Gapo_Work_Logo_Wordmark_b92944bde4.png",
@@ -56,7 +56,7 @@
         "@type": "ProfessionalService",
         "@id": "https://gapowork.com",
         "description": "",
-        "name": "GapoWork: Nền tảng giao tiếp dành cho doanh nghiệp",
+        "name": "GapoWork: Communication platform for businesses",
         "url": "https://gapowork.com/",
         "telephone": "1900 633 338",
         "sameAs": [
@@ -89,22 +89,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-{{> vi/header }}
+{{> en/header }}
 <main class="overflow-x-hidden">
-    {{> vi/content-1}}
-    {{> vi/content-2}}
-    {{> vi/content-3-pc}}
-    {{> vi/content-3-mb}}
-    {{> vi/content-4}}
-    {{> vi/content-5}}
-    {{> vi/content-6}}
-    {{> vi/modal}}
-    {{> vi/modal-success}}
+    {{> en/content-1}}
+    {{> en/content-2}}
+    {{> en/content-3-pc}}
+    {{> en/content-3-mb}}
+    {{> en/content-4}}
+    {{> en/content-5}}
+    {{> en/content-6}}
+    {{> en/modal}}
+    {{> en/modal-success}}
 </main>
-{{> vi/footer}}
+{{> en/footer}}
 
 <script type="module" src="./main.js"></script>
 </body>
